--- a/index.html
+++ b/index.html
@@ -39,76 +39,78 @@
         <script src="./js/pages/favorites.js"></script>
 
         <script>
-        // REGISTER SERVICE WORKER
-        if (!'serviceWorker' in navigator) {
-            console.log("Service worker tidak didukung browser ini.")
-        } else {
-            registerServiceWorker()
-            requestPermission()
-        }
+        (function() {
+            // REGISTER SERVICE WORKER
+            if (!'serviceWorker' in navigator) {
+                console.log("Service worker tidak didukung browser ini.")
+            } else {
+                registerServiceWorker()
+                requestPermission()
+            }
 
-        // REGISTER SERVICE WORKER
-        function registerServiceWorker() {
-            return navigator.serviceWorker.register('/service-worker.js')
-            .then(function (registration) {
-                console.log('Registrasi service worker berhasil.')
-                return registration
-            })
-            .catch(function (err) {
-                console.error('Registrasi service worker gagal.', err)
-            });
-        }
-
-        // REQUEST NOTIF
-        function requestPermission() {
-            // CHECK NOTIFICATION
-            if ("Notification" in window) {
-                Notification.requestPermission().then(function (result) {
-                    if (result === "denied") {
-                        console.log("Fitur notifikasi tidak diijinkan.")
-                        return;
-                    } else if (result === "default") {
-                        console.error("Pengguna menutup kotak dialog permintaan ijin.")
-                        return;
-                    }
-                   
-                    if('PushManager' in window){
-                      navigator.serviceWorker.getRegistration()
-                      .then( registration =>{
-                        registration.pushManager.subscribe({
-                          userVisibleOnly: true,
-                          applicationServerKey: urlBase64ToUint8Array('BLGf9t5wPnJe_o8NB4gi9j8j8x03osUGFpIJ2Pi-KXMzMNpkYmuqEbS4But8ke1L9XIm5tYKhMNt-8Y0xjqB_SI')
-                        }).then(subscribe =>{
-                          console.log('Berhasil melakukan subscribe dengan endpoint: ', subscribe.endpoint)
-                          console.log('Berhasil melakukan subscribe dengan p256dh key: ', btoa(String.fromCharCode.apply(
-                            null, new Uint8Array(subscribe.getKey('p256dh')))));
-                          console.log('Berhasil melakukan subscribe dengan auth key: ', btoa(String.fromCharCode.apply(
-                            null, new Uint8Array(subscribe.getKey('auth')))));
-                        })
-                      })
-                      .catch(err =>{
-                        console.error('Tidak dapat melakukan subscribe ', err.message);
-                      })
-                    }
+            // REGISTER SERVICE WORKER
+            function registerServiceWorker() {
+                return navigator.serviceWorker.register('/service-worker.js')
+                .then(function (registration) {
+                    console.log('Registrasi service worker berhasil.')
+                    return registration
+                })
+                .catch(function (err) {
+                    console.error('Registrasi service worker gagal.', err)
                 });
-            }else{
-                console.error("Can't access notification");
             }
-        }
 
-        // CONVERT
-        function urlBase64ToUint8Array(base64String) {
-            const padding = '='.repeat((4 - base64String.length % 4) % 4);
-            const base64 = (base64String + padding)
-                .replace(/-/g, '+')
-                .replace(/_/g, '/');
-            const rawData = window.atob(base64);
-            const outputArray = new Uint8Array(rawData.length);
-            for (let i = 0; i < rawData.length; ++i) {
-                outputArray[i] = rawData.charCodeAt(i);
+            // REQUEST NOTIF
+            function requestPermission() {
+                // CHECK NOTIFICATION
+                if ("Notification" in window) {
+                    Notification.requestPermission().then(function (result) {
+                        if (result === "denied") {
+                            console.log("Fitur notifikasi tidak diijinkan.")
+                            return;
+                        } else if (result === "default") {
+                            console.error("Pengguna menutup kotak dialog permintaan ijin.")
+                            return;
+                        }
+                    
+                        if('PushManager' in window){
+                        navigator.serviceWorker.getRegistration()
+                        .then( registration =>{
+                            registration.pushManager.subscribe({
+                            userVisibleOnly: true,
+                            applicationServerKey: urlBase64ToUint8Array('BLGf9t5wPnJe_o8NB4gi9j8j8x03osUGFpIJ2Pi-KXMzMNpkYmuqEbS4But8ke1L9XIm5tYKhMNt-8Y0xjqB_SI')
+                            }).then(subscribe =>{
+                            console.log('Berhasil melakukan subscribe dengan endpoint: ', subscribe.endpoint)
+                            console.log('Berhasil melakukan subscribe dengan p256dh key: ', btoa(String.fromCharCode.apply(
+                                null, new Uint8Array(subscribe.getKey('p256dh')))));
+                            console.log('Berhasil melakukan subscribe dengan auth key: ', btoa(String.fromCharCode.apply(
+                                null, new Uint8Array(subscribe.getKey('auth')))));
+                            })
+                        })
+                        .catch(err =>{
+                            console.error('Tidak dapat melakukan subscribe ', err.message);
+                        })
+                        }
+                    });
+                }else{
+                    console.error("Can't access notification");
+                }
             }
-            return outputArray;
-        }
+
+            // CONVERT
+            function urlBase64ToUint8Array(base64String) {
+                const padding = '='.repeat((4 - base64String.length % 4) % 4);
+                const base64 = (base64String + padding)
+                    .replace(/-/g, '+')
+                    .replace(/_/g, '/');
+                const rawData = window.atob(base64);
+                const outputArray = new Uint8Array(rawData.length);
+                for (let i = 0; i < rawData.length; ++i) {
+                    outputArray[i] = rawData.charCodeAt(i);
+                }
+                return outputArray;
+            }
+        })();
         </script>
     </body>
 
