--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                 console.log("Service worker tidak didukung browser ini.")
             } else {
                 registerServiceWorker()
-                requestPermission()
+                navigator.serviceWorker.ready.then((e) => {
+                    requestPermission()
+                })
             }
 
             // REGISTER SERVICE WORKER
